# extremely-extreme-sports

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  config.json  extremely-extreme-sports.js  extremely-extreme-sports.wasm  extremely-extreme-sports_bg.wasm  flake.nix  index.html  ld50.js  ld50_bg.wasm  particle_program.glsl  stone2.json  tree2.json  tree6.json
.github/workflows/: flow.yml
assets/: config.json  flag.json  obstacles.json  texture_program.glsl  tree4.json
assets/player/: body.json
assets/player/coat/: _list.json  blue_puffy.json  pink_bikini.json  red_coat.json
assets/player/face/: bracket.json  flat.json  mustache.json
assets/player/hat/: red_cap.json  yellow_crown.json
assets/player/pants/: _list.json  pink_bikini.json
player/: custom.json  parachute.json
player/equipment/: _list.json
player/face/: _list.json  sunglasses.json
player/hat/: _list.json  blank.json
player/pants/: heart.json
player/secret/: _list.json
postmortem/: postmortem.md
snippets/geng-edc60bc899985f8e/: inline1.js
src/: assets.rs  discord.rs  font.rs  lobby.rs  main.rs  model.rs
src/assets/: mod.rs  texture.rs
src/client/: game.rs  lobby.rs  mod.rs  player.rs
src/model/: mod.rs  track.rs
src/server/: mod.rs  track.rs
src/simple_net/: lobby.rs  mod.rs  server.rs
src/skin/: mod.rs
src/ui/: mod.rs
static/: config.json  index.html  particle_program.glsl  player_config copy.json  player_config.json  shadow.glsl  stone.json  texture_program.glsl  textures.json  tree.json
static/player/: custom.json  parachute.json
(+28 files in other folders)
