[package]
name = "extremely-extreme-sports"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geng = { git = "https://github.com/kuviman/geng" }
serde = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", features = [
    "json",
    "blocking",
    "rustls-tls",
], default-features = false }
open = "1"
